# gpr200-fa2024-template

./: CMakeLists.txt  LICENSE  README.md
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment1_helloTriangle/assets/: readme.txt
core/: CMakeLists.txt
core/ew/ewMath/: ewMath.h
